# namespace

./: .gitignore  exeplo_02.py  main.py  modulo.py  pyproject.toml
geContexto/: contexto.py  exemplo_1.py  exemplo_2.py  exemplo_3.py
typeHints/: exemplo_01.py  exemplo_02.py  exemplo_03.py  exercicio_01.py  exercicio_02.py  exercicio_03.py
