[tool.poetry]
name = "namespace"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
ipython = "^8.14.0"
ipdb = "^0.13.13"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
taskipy = "^1.11.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
test = "pytest test -vv && coverage report -m"
post_test = "coverage html"